style: fix Picker options partially overlap in older versions of Safari

--- a/src/packages/__VUE/oldpicker/index.scss
+++ b/src/packages/__VUE/oldpicker/index.scss
@@ -87,6 +87,8 @@
     &-item {
       display: block;
       backface-visibility: hidden;
+      -moz-backface-visibility: hidden;
+      -webkit-backface-visibility: hidden;
       position: absolute;
       top: 0;
       width: 100%;
